--- a/client-app/src/main/resources/application.yml
+++ b/client-app/src/main/resources/application.yml
@@ -19,8 +19,8 @@ security:
         client-id: messaging-client
         client-secret: secret
         grant-type: authorization_code
-        user-authorization-uri: http://auth-server:8090/oauth/authorize
-        access-token-uri: http://auth-server:8090/oauth/token
+        user-authorization-uri: http://localhost:8090/oauth/authorize
+        access-token-uri: http://localhost:8090/oauth/token
         scope: message.read, message.write
         pre-established-redirect-uri: http://localhost:8080/authorized
         use-current-uri: false
@@ -28,13 +28,13 @@ security:
         client-id: messaging-client
         client-secret: secret
         grant-type: client_credentials
-        access-token-uri: http://auth-server:8090/oauth/token
+        access-token-uri: http://localhost:8090/oauth/token
         scope: message.read, message.write
       messaging-client-password:
         client-id: messaging-client
         client-secret: secret
         grant-type: password
-        access-token-uri: http://auth-server:8090/oauth/token
+        access-token-uri: http://localhost:8090/oauth/token
         scope: message.read, message.write
 
 messages:
