--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -13,4 +13,4 @@ security:
     resource:
       filter-order: 3
       jwk:
-        key-set-uri: http://auth-server:8090/oauth2/keys
+        key-set-uri: http://localhost:8090/oauth2/keys
